tests/istio_testcases/example_policies/dra-test/dra-istio-ingress-test-scheme.yaml
namespaceList: ./
podList: ./

networkConfigList:
  - name: dra-istio-ingress-test
    networkPolicyList:
      - istio-ingress-gateway.yaml
      - istio-ingress-virtualservice.yaml
    expectedWarnings: 0


queries:
  - name: connectivity
    connectivityMap:
      - dra-istio-ingress-test
    outputConfiguration:
      outputFormat: txt
      fwRulesRunInTestMode: false
    expectedOutput: ../../expected_output/dra-istio-ingress-test-connectivity-map.txt
