tests/istio_testcases/example_policies/dra-test/dra-k8s-ingress-cluster-test-scheme.yaml
namespaceList: ./
podList: ./

networkConfigList:
  - name: dra-k8s-ingress-test
    networkPolicyList:
      - ingress_cluster.yaml
    expectedWarnings: 0


queries:
  - name: connectivity
    connectivityMap:
      - dra-k8s-ingress-test
    outputConfiguration:
      outputFormat: txt
      fwRulesRunInTestMode: false
    expectedOutput: ../../expected_output/dra-k8s-ingress-cluster-test-connectivity-map.txt
