tests/istio_testcases/example_policies/dra-test/gateservice-deployment.yaml
---
# Source: dra/templates/gateservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-gateservice
  namespace: doi
spec:
  selector:
    matchLabels:
      app: gateservice
      chart: dra
      release: RELEASE-NAME
  replicas: 2
  template:
    metadata:
      labels:
        app: gateservice
        chart: dra
        release: RELEASE-NAME
    spec:
      serviceAccountName: serviceaccount-gateservice
      terminationGracePeriodSeconds: 60
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 10
            preference:
              matchExpressions:
              - key: dedicated
                operator: In
                values: 
                - internal
      volumes:
        - name: at-events
          hostPath:
            path: /var/log/at-no-rotate
