tests/istio_testcases/example_policies/dra-test/gitsecure-service.yaml
---
# Source: dra/templates/gitsecure-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-gitsecure
  namespace: doi
  labels:
    app: gitsecure
    chart: dra-0.0.1
    release: RELEASE-NAME
spec:
  type: ClusterIP
  ports:
  - name: serviceport
    port: 80
    protocol: TCP
    targetPort: 9950
  - name: sysdigport
    port: 15020
    protocol: TCP
    targetPort: 15020
  selector:
    app: gitsecure
    release: RELEASE-NAME
