tests/istio_testcases/example_policies/dra-test/istio-ingress-destinationrule.yaml
---
# Source: dra/templates/istio-ingress-destinationrule.yaml
apiVersion: "networking.istio.io/v1beta1"
kind: "DestinationRule"
metadata:
 name: "destination-mtls"
 namespace: doi
spec:
 host: "*.local"
 trafficPolicy:
   tls:
     mode: ISTIO_MUTUAL
