tests/istio_testcases/example_policies/dra-test/otcbroker-service.yaml
---
# Source: dra/templates/otcbroker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-otcbroker
  namespace: doi
  labels:
    app: otcbroker
    chart: dra-0.0.1
    release: RELEASE-NAME
spec:
  type: ClusterIP
  ports:
  - name: serviceport
    port: 80
    protocol: TCP
    targetPort: 3200
  - name: sysdigport
    port: 15020
    protocol: TCP
    targetPort: 15020
  selector:
    app: otcbroker
    release: RELEASE-NAME
