tests/istio_testcases/example_policies/dra-test/pgbouncer-deployment.yaml
---
# Source: dra/templates/pgbouncer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-pgbouncer
  namespace: doi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pgbouncer
      chart: dra
      release: RELEASE-NAME
  template:
    metadata:
      labels:
        app: pgbouncer
        chart: dra
        release: RELEASE-NAME
      
      annotations:
        traffic.sidecar.istio.io/excludeOutboundPorts: "30036"
      
    spec:
      serviceAccountName: serviceaccount-pgbouncer
      terminationGracePeriodSeconds: 60
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 10
            preference:
              matchExpressions:
              - key: dedicated
                operator: In
                values: 
                - internal
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
      volumes:
        - name: secret
          secret:
            secretName: secrets-pgbouncer
        - name: pgbouncer-config
          emptyDir: {}
        - name: pre-config
          configMap:
            name: cfgmap-pgbouncer
