tests/istio_testcases/example_policies/dra-test/pipelinemetrics-service.yaml
---
# Source: dra/templates/pipelinemetrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-pipelinemetrics
  namespace: doi
  labels:
    app: pipelinemetrics
    chart: dra-0.0.1
    release: RELEASE-NAME
spec:
  type: ClusterIP
  ports:
  - name: serviceport
    port: 80
    protocol: TCP
    targetPort: 3500
  - name: sysdigport
    port: 15020
    protocol: TCP
    targetPort: 15020
  selector:
    app: pipelinemetrics
    release: RELEASE-NAME
