tests/istio_testcases/example_policies/dra-test/rcbroker-deployment.yaml
---
# Source: dra/templates/rcbroker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-rcbroker
  namespace: "doi"
spec:
  selector:
    matchLabels:
      app: "rcbroker"
      chart: dra
      release: RELEASE-NAME
  replicas: 2
  template:
    metadata:
      labels:
        app: "rcbroker"
        chart: dra
        release: RELEASE-NAME
    spec:
      serviceAccountName: serviceaccount-rcbroker
      terminationGracePeriodSeconds: 60
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 10
            preference:
              matchExpressions:
              - key: dedicated
                operator: In
                values: 
                - internal
