tests/istio_testcases/example_policies/dra-test/rcbroker-service.yaml
---
# Source: dra/templates/rcbroker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-rcbroker
  namespace: "doi"
  labels:
    app: "rcbroker"
    chart: dra-0.0.1
    release: RELEASE-NAME
spec:
  type: ClusterIP
  ports:
  - name: serviceport
    port: 80
    protocol: TCP
    targetPort: 4000
  - name: sysdigport
    port: 15020
    protocol: TCP
    targetPort: 15020
  selector:
    app: "rcbroker"
    release: RELEASE-NAME
