tests/istio_testcases/example_policies/dra-test/snykupdater-deployment.yaml
---
# Source: dra/templates/snykupdater-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-snykupdater
  namespace: "doi"
spec:
  selector:
    matchLabels:
      app: "snykupdater"
      chart: dra
      release: RELEASE-NAME
  replicas: 3
  template:
    metadata:
      labels:
        app: "snykupdater"
        chart: dra
        release: RELEASE-NAME
    spec:
      serviceAccountName: serviceaccount-snykupdater
      terminationGracePeriodSeconds: 60
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 10
            preference:
              matchExpressions:
              - key: dedicated
                operator: In
                values: 
                - internal
